tests/purs/warning/DeprecatedForeignImportKind.purs
-- @shouldWarnWith WarningParsingModule
module Main where

foreign import kind Foo
